--- a/louerlab/louerlab.css
+++ b/louerlab/louerlab.css
@@ -26,14 +26,19 @@ header{
     width:100%;
     height: 600px;
     background-image: url(../assets/imgFundo.jpg);
-    background-size: cover;
+     background-size: cover; 
 }
 
 #textPrincipal{
     font-size: 70px;
-    color: #ffffff;
+    color: rgba(255, 255, 255, .9);
     text-align: right;
     padding: 50px 0 30px 0;
+}
+
+.textoQuemSomos{
+    font-size: 30px;
+    color: rgba(255, 255, 255, .9);
 }
 
 .areaTexto{
@@ -52,6 +57,7 @@ header{
     text-align: center;
     padding: 70px;
     box-sizing: border-box;
+    color: #000;
 }
 
 .titHistoria{
@@ -65,7 +71,7 @@ header{
 .sessaoProposito{
     width: 100%;
     height: 617px;
-    background-image: url(../assets/fundoMissaoCinza.jpg);
+    background-image: url(../assets/fundoMissaoAzul.jpg);
     background-size: cover;
     text-align: center;
     align-items: center;
@@ -82,8 +88,7 @@ header{
 
 .textoMenorProposito{
     font-size: 30px;
-    color: white;
-    
+    color: white; 
 }
 
 .espacoIcone{
@@ -161,16 +166,71 @@ img{
 
 .botaoSaibaMais{
     width: 250px;
-    height: 40px;
-    border: 3px solid #A3A3AD;
+    height: auto;
+    border: 2px solid #3434ee;
     border-radius: 50px;
     text-align: center;
+    background-color: #ffffff;
 }
 
-h3{
+/* .botaoSaibaMais :hover{
+    color: #ffffff;
+    background-color: #3434ee;
+    border-radius: 50px;
+} */
+
+/* h3{
     font-size: 25px;
-    padding-top: 5px;
-}
+} */
+
+.custom-btn {
+    width: 250px;
+    height: 40px;
+    color: #fff;
+    border-radius: 50px;
+    font-size: 25px;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+     7px 7px 20px 0px rgba(0,0,0,.1),
+     4px 4px 5px 0px rgba(0,0,0,.1);
+    outline: none;
+  }
+
+  .btn-15 {
+    background: rgb(163, 163, 173);
+    border: none;
+    z-index: 1;
+  }
+  .btn-15:after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 100%;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    background-color: #3434ee;
+    border-radius: 50px;
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+     7px 7px 20px 0px rgba(0,0,0,.1),
+     4px 4px 5px 0px rgba(0,0,0,.1);
+    transition: all 0.3s ease;
+  }
+  .btn-15:hover {
+    color: #fff;
+  }
+  .btn-15:hover:after {
+    left: 0;
+    width: 100%;
+  }
+  .btn-15:active {
+    top: 2px;
+  }
 
 .nossosParceiros{
     width: 100%;
@@ -210,6 +270,13 @@ h3{
     width: 13%;
     height: 120px;
 }
+
+#logoMarca:hover{
+    width: 14%;
+    height: 130px;
+    transition: 1s;
+}
+
 
 footer{
     width: 100%;
