--- a/produtos/produtos.css
+++ b/produtos/produtos.css
@@ -96,7 +96,7 @@
     height: 300px;
     width: 100%;
     background-color: #d9d9d9;
-    background-image: url(imagens/fundo-gradiente.png);
+    background-image: url(assets/fundo-gradiente.png);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
