--- a/registro/cadastro.css
+++ b/registro/cadastro.css
@@ -23,6 +23,7 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
 div{
     width: 38%;
@@ -76,7 +77,7 @@ p{
     line-height: 62px;
     margin-top: 5px;
     text-align: center;
-    top: 450px;
+    top: 500px;
 
 }
 
