--- a/orcamento/orcamento.css
+++ b/orcamento/orcamento.css
@@ -5,6 +5,11 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
 }
+
+body{
+    overflow-x: hidden;
+}
+
 main{
     width: 100%;
     height: auto;
@@ -107,13 +112,10 @@ header{
  #div_caixas{
     width: 45%;
     flex-direction: column;
+    
  }
 
- /* Div da caixa 4*/
- #div_caixa{
-    width: 45%;
-    margin-left: 3.3%;
- }
+ 
 
  #caixa1{
     position: relative;
@@ -150,14 +152,14 @@ header{
  }
 
  #texto1 {
-    font-size: 23px;
+    font-size: 22px;
     margin-top: 30px;
     color: #000;
     
  }
 
  #texto2{
-    font-size: 23px;
+    font-size: 22px;
     text-align: center;
     margin-top: 50px;
     color: #000;
@@ -191,14 +193,14 @@ header{
 }
 
 #texto_mac1{
-    font-size: 23px;
+    font-size: 22px;
     margin-top: 20px;
     color: #000;
     text-align: center;
 }
 
 #texto_mac2{
-    font-size: 23px;
+    font-size: 22px;
     margin-top: 30px;
     color: #000;
     text-align: center;
@@ -234,7 +236,7 @@ header{
 }
 
 #texto_tablete1{
-    font-size: 23px;
+    font-size: 22px;
     margin-top: 20px;
     color: #000;
     text-align: center;
@@ -242,13 +244,21 @@ header{
 }
 
 #texto_tablete2{
-    font-size: 23px;
+    font-size: 22px;
     margin-top: 30px;
     color: #000;
     text-align: center;
 
 }
 
+
+
+/* Div da caixa 4*/
+#div_caixa{
+    width: 45%;
+    margin-left: 3.3%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
 
 #caixa4{
     position: relative;
@@ -259,36 +269,47 @@ header{
     border-radius: 15px;
     border: 1px solid #000;
     text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       
+}
+
+#caixa4  p{
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+    
 }
 
 #caixa4 a{
     text-decoration: none;
-    font-family: roboto;
-    font-size: 18px;
-    
 }
 
 #titulo4{
     text-align: center;
     color: #000;
-    font-size: 20px;
+    font-size: 23px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+    
 }
 
 #monitor4{
     width: 40%;
     height: 175px;
     margin-top: 50px;
-    margin-left: 20px;
+    margin-left: 15px;
     float: left;
+    
 }
 
 #texto4{
     text-align: center;
     margin-top: 70px;
-    margin-left: 15px;
+    
     color: #000;
-    font-size: 18px;
+    font-size: 21px;
+    
+    
     
 
 }
@@ -296,29 +317,31 @@ header{
 #adicionar{
     color: #000;
     text-align: center;
-    font-size: 18px;
+    font-size: 21px;
     margin-top: 20px;
+    
 }
 
 #samsung{
     width: 40%;
     height: 175px;
     margin-top: 110px;
-    margin-left: 20px;
+    margin-left: 15px;
     float: left;
     clear: left;
+    
     
 }
 
 #texto_samsung{
     float: left;
     color: #000;
-    font-size: 18px;
+    font-size: 21px;
     margin-top: 140px;
     margin-left: 15px;
     text-align: center;
     margin-bottom: 15px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    
     
 
 }
@@ -326,8 +349,10 @@ header{
 #adicionar2{
     color: #000;
     text-align: center;
-    font-size: 18px;
-     margin-top: 50px;
+    font-size: 21px;
+    margin-top: 50px;
+    
+
     
     
 }
@@ -336,35 +361,32 @@ header{
     width: 40%;
     height: 175px;
     margin-top: 110px;
-    margin-left: 20px;
+    margin-left: 15px;
     float: left;
     clear: left;
+    
     
 }
 
 #texto_tablete{
     float: left;
     color: #000;
-    font-size: 18px;
+    font-size: 21px;
     margin-top: 150px;
     margin-bottom: 15px;
-    margin-left: 50px;
+    margin-left: 15px;
     text-align: center;
     
 }
 
 #adicionar3{
     color: #000;
-    font-size: 18px;
+    font-size: 21px;
     float: left;
     margin-left: 110px;
-    
+   
     
 }
-
-
-
-
 
 
 #frase{
@@ -489,45 +511,61 @@ header{
 }
 
 
-.calcular{
+
+
+
+#calculos .calcular{
     width: 373px;
-    height: 55px;
+    height: 45px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
-    font-size: 20px;
-    padding-left: 10px;
+    font-size: 25px;
+    padding-top: 10px;
     margin-top: 25px;
     margin-left: 75px;
+    text-align: center;
     float: left;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    cursor: pointer;
+    
+
     
 }
 
-.valor{
+.valor_frete{
     width: 373px;
-    height: 55px;
+    height: 45px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
-    font-size: 20px;
-    padding-left: 10px;
+    font-size: 25px;
+    padding-top: 10px;
     margin-top: 25px;
-    margin-left: 25px;
+    margin-left: 40px;
+    text-align: center;
     float: left;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    cursor: pointer;
+    
     
 }
 
 .valor_total{
     width: 373px;
-    height: 55px;
+    height: 45px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
-    font-size: 20px;
-    padding-left: 10px;
+    font-size: 25px;
+    padding-top: 10px;
     margin-top: 25px;
-    margin-left: 25px;
-    float: left; 
+    margin-left: 40px;
+    text-align: center;
+    float: left;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    cursor: pointer;
+    
 }
 
 
