--- a/login/login.css
+++ b/login/login.css
@@ -35,10 +35,12 @@ form{
     margin-top: 32px;
 }
 
-form .field{
+.form .field{
+    position: relative;
     height: 52px;
     width: 100%;
     margin-top: 22px;
+    border-radius: 7px;
 }
 
 .field input,
@@ -52,14 +54,31 @@ form .field{
 }
 
 .field input{
+    outline: none;
     padding: 0 16px;
     border: 1px solid #000000;
+}
+
+.field input:focus{
+    border-bottom-width: 2px;
+}
+
+.field button{
+    color: #D9D9D9;
+    background-color: #0071d3;
+    transition: all 0.3s ease;
+    cursor:pointer;
+}
+
+.field button :hover{
+    background-color: #016dcb;
 }
 
 .form-link{
     text-align: center;
     margin-top: 12px;
 }
+
 
 .form-link span,
 .form-link span a{
@@ -74,6 +93,74 @@ form .field{
     text-decoration: none;
 }
 
-.form a:hover{
+.form-content a:hover{
     text-decoration: underline;
+}
+
+.line{
+    position: relative;
+    height: 1px;
+    width: 100%;
+    margin:36px 0;
+    background-color: black;
+}
+
+.line::before{
+    content: "Ou";
+    position: absolute;
+    top: 60%;
+    left: 40%;
+    transform: translate(-50% -50%);
+    color:#000000;
+    padding: 0 15px;
+}
+
+.media-options a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a.facebook{
+    color:#D9D9D9;
+    background-color: #4267b2;
+
+}
+
+a.facebook .facebook-icon{
+    height: 29px;
+    width: 29px;
+    color: #4267b2;
+    font-size: 20px;
+    border-radius: 50%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+
+}
+
+.facebook-icon,
+img.google-img{
+    position: absolute;
+    top: 50%;
+    left: 14px;
+    transform:translateY(-50%)
+}
+
+img.google-img{
+    height: 20px;
+    width: 20px;
+    object-fit: cover;
+
+}
+
+a.google{
+    border: 1px solid #D9D9D9;
+}
+
+a.google span{
+    font-weight: 500;
+    opacity: 0.7;
+    color:#000000;
 }
