--- a/login/login.css
+++ b/login/login.css
@@ -8,7 +8,7 @@
 }
 
 .container{
-    height: 100vh;
+    height: 120vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -17,18 +17,23 @@
 }
 
 .form{
-    max-width: 430px;
-    width: 100%;
+    max-width: 480px;
+    width: 60%;
     padding:30px;
     border-radius: 7px;
     background-color: white;
 }
 
 header{
-    font-size: 29px;
+    font-size: 20px;
     font-weight: 600;
     color:black;
     text-align: center;
+}
+
+header img{
+    height: 150px;
+    width: 170px;
 }
 
 form{
