--- a/orcamento/orcamento.css
+++ b/orcamento/orcamento.css
@@ -74,6 +74,8 @@ header{
  /* Final da header*/
 
 
+
+ /* Inicio backgroud com logo branco*/
  #fundo_imagem{
     width: 100%;
     height: 400px;
@@ -82,8 +84,6 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
     
-    
-
  }
 
  .logo_branco{
@@ -94,8 +94,10 @@ header{
     
  }
 
+ /* fim backgroud com logo branco*/
 
 
+ /* inicio da section*/
  section{
     width: 100%;
     height: auto;
@@ -113,7 +115,7 @@ header{
  }
 
  
-
+/* inicio caixa 1*/
  #caixa1{
     position: relative;
     width: 100%;
@@ -130,6 +132,8 @@ header{
     text-decoration: none;
     
 }
+
+
  
  #titulo{
     text-align: center;
@@ -162,7 +166,9 @@ header{
     color: #000;
  }
 
+ /* fim da caixa1*/
 
+/* inicio caixa 2*/
 #caixa2{
     position: relative;
     width: 100%;
@@ -203,6 +209,10 @@ header{
     text-align: center;
 }
 
+/* fim caixa 2*/
+
+/* inicio caixa 3*/
+
 #caixa3{
     position: relative;
     width: 100%;
@@ -211,9 +221,7 @@ header{
     margin-top: 30px;
     border-radius: 15px;
     border: 1px solid #000;
-    text-decoration: none;
-    
-    
+    text-decoration: none; 
 
 }
 
@@ -247,6 +255,8 @@ header{
     text-align: center;
 
 }
+
+/*Fim da caixa 3*/
 
 
 
@@ -286,8 +296,6 @@ header{
     color: #000;
     font-size: 23px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    
 }
 
 #monitor4{
@@ -302,14 +310,11 @@ header{
 #texto4{
     text-align: center;
     margin-top: 70px;
-    
     color: #000;
     font-size: 21px;
-    
-    
-    
-
 }
+
+
 
 #adicionar{
     color: #000;
@@ -326,8 +331,6 @@ header{
     margin-left: 15px;
     float: left;
     clear: left;
-    
-    
 }
 
 #texto_samsung{
@@ -338,9 +341,6 @@ header{
     margin-left: 15px;
     text-align: center;
     margin-bottom: 15px;
-    
-    
-
 }
 
 #adicionar2{
@@ -348,10 +348,6 @@ header{
     text-align: center;
     font-size: 21px;
     margin-top: 50px;
-    
-
-    
-    
 }
 
 #tablete4{
@@ -360,9 +356,7 @@ header{
     margin-top: 110px;
     margin-left: 15px;
     float: left;
-    clear: left;
-    
-    
+    clear: left; 
 }
 
 #texto_tablete{
@@ -373,7 +367,6 @@ header{
     margin-bottom: 15px;
     margin-left: 15px;
     text-align: center;
-    
 }
 
 #adicionar3{
@@ -381,9 +374,9 @@ header{
     font-size: 21px;
     float: left;
     margin-left: 110px;
-   
-    
 }
+
+/*Fim da caixa 4*/
 
 
 #frase{
@@ -430,8 +423,6 @@ header{
     margin-top: 35px;
     margin-left: 26px;
     float: left;
-    
-
 }
 
 .altura{
@@ -448,7 +439,6 @@ header{
     clear: left; 
     display: flex;
     flex-direction: row;
-    
 }
 
 .largura{
@@ -526,8 +516,6 @@ header{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     cursor: pointer;
     
-
-    
 }
 
 .valor_frete{
@@ -564,6 +552,20 @@ header{
     cursor: pointer;
     
 }
+
+
+/*Fim da programação desktop*/
+
+
+
+
+/* Vizualização smartphone*/
+
+
+
+
+
+
 
 
 
