--- a/home/home.css
+++ b/home/home.css
@@ -1,4 +1,164 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/*estilo adicionado no menu ao rolar*/
+#menu.ativo{
+    background-color: #d9d9d9;
+    position: sticky;
+    top: 0;
+}
+
+/*estilo adicionado ao toggle*/
+.remove{
+    display: none;
+}
+
+.add{
+    display: block;
+}
+
+/*estilo do menu*/
+#menu{
+    width: 100%;
+    height: 100px;
+    background-color: #ffffff;
+    align-items: center;
+}
+
+.listamenu{
+    width: 100%;
+    height: 100%;
+    padding: 0 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.listamenu img{
+    width: fit-content;
+    height: 100px;
+}
+
+.listamenu ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+.lista_centro{
+    align-items: center;
+    font-size: 25px;
+}
+
+.lista_centro a{
+    text-decoration: none;
+}
+
+.lista_centro li{
+    color: #141274;
+    margin: 0 5px;
+    padding: 2px 15px;
+}
+
+.lista_direita{
+    align-items: center;
+}
+
+.lista_direita a{
+    display: flex;
+    text-decoration: none;
+}
+
+.lista_direita button{
+    font-size: 25px;
+    background-color: transparent;
+    width: 100px;
+    margin-right: 15px;
+    color: #141274;
+    border: 0px;
+    cursor: pointer;
+}
+
+.lista_direita li{
+    padding: 10px;
+}
+
+.lista_direita img{
+    width: 40px;
+}
+
+
+/*estilo do rodapé*/
+footer{
+    width: 100%;
+    height: 350px;
+    background-color: #63636A;
+}
+
+footer .conteudo_footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: #ffffff;
+    font-size: 20px;
+    width: 100%;
+    height: 310px;
+    padding: 20px 30px;
+}
+
+footer .divs_footer{
+    display: flex;
+    flex-direction: column;
+    width: 240px;
+    height: 100%;   
+}
+
+.divs_footer img{
+    width: 200px;
+    height: fit-content;
+}
+
+.divs_footer span{
+    padding: 20px 0;
+    font-size: 24px;
+}
+
+.divs_footer ul{
+    list-style: none;
+}
+
+.divs_footer ul li img{
+    width: 30px;
+    margin-right: 10px;
+}
+
+.divs_footer a, .divs_footer a img{
+    align-items: center;
+    text-decoration: none;
+    color: #ffffff;
+    width: 18px;
+}
+
+footer .topo_pagina{
+    height: 30px;
+    border-radius: 50px;
+    background-color: #ffffff;
+}
+
+footer .topo_pagina span{
+    font-size: 30px;
+    color: #000000;
+}
+
+footer .copyright{
+    background-color: #ffffff;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    width: 100%;
+    height: 50px;
 }
