--- a/louerlab/louerlab.css
+++ b/louerlab/louerlab.css
@@ -7,9 +7,18 @@
 
 /*estilo adicionado no menu ao rolar*/
 #menu.ativo{
-    background-color: #d9d9d9;
-    position: sticky;
+    background-color: #ffffff;
+    position: fixed;
     top: 0;
+    z-index: 1;
+    transition: 2.5s;
+}
+#menu.ativo:hover{
+    background-color: #919191f8;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    transition: 2.5s;
 }
 
 /*estilo adicionado ao toggle*/
