--- a/orcamento/orcamento.css
+++ b/orcamento/orcamento.css
@@ -175,7 +175,9 @@ header{
     width: 400px;
     height: 276px;
     margin: auto;
-    padding-top: 60px;
+    margin-top: 63px;
+    
+    
     
  }
 
@@ -355,7 +357,7 @@ header{
 #caixa4{
     position: relative;
     width: 100%;
-    height: 874px;
+    height: 870.8px;
     background-color: #f5f5f5;
     margin-top: 30px;
     border-radius: 15px;
@@ -484,7 +486,7 @@ header{
     border: 1px solid  #000;
     border-radius: 15px;
     margin-top: 35px;
-    margin-left: 75px;
+    margin-left: 95px;
     font-size: 25px;
     padding-left: 15px;
     float: left;
@@ -514,13 +516,13 @@ header{
 
 .altura{
     width: 205px;
-    height: 55px;
+    height: 60px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 20px;
     padding-left: 10px;
-    margin-left: 75px;
+    margin-left: 95px;
     margin-top: 15px;
     float: left;
     clear: left; 
@@ -530,70 +532,71 @@ header{
 
 .largura{
     width: 205px;
-    height: 55px;
+    height: 60px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 20px;
     padding-left: 10px;
     margin-top: 15px;
-    margin-left: 30px;
+    margin-left: 37px;
     float: left;
     
 }
 
 .comprimento{
     width: 205px;
-    height: 55px;
+    height: 60px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 20px;
-    padding-left: 10px;
+    padding-left: 8px;
     margin-top: 15px;
-    margin-left: 30px;
+    margin-left: 36px;
     float: left;
     
 }
 
 .peso{
     width: 205px;
-    height: 55px;
+    height: 60px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 20px;
     padding-left: 10px;
     margin-top: 15px;
-    margin-left: 30px;
+    margin-left: 37px;
     float: left;
     
 }
 
 .valor_produto{
     width: 205px;
-    height: 55px;
+    height: 60px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 20px;
-    padding-left: 10px;
+    text-align: center;
     margin-top: 15px;
-    margin-left: 30px;
+    margin-left: 37px;
     float: left;
+
     
 }
 
 #calculos .calcular{
-    width: 373px;
+    width: 365px;
     height: 45px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 25px;
-    padding-top: 10px;
+    padding-top: 5px;
     margin-top: 25px;
-    margin-left: 75px;
+    margin-left: 95px;
     text-align: center;
     float: left;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -602,13 +605,13 @@ header{
 }
 
 .valor_frete{
-    width: 373px;
+    width: 365px;
     height: 45px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 25px;
-    padding-top: 10px;
+    padding-top: 5px;
     margin-top: 25px;
     margin-left: 40px;
     text-align: center;
@@ -620,19 +623,20 @@ header{
 }
 
 .valor_total{
-    width: 373px;
+    width: 363px;
     height: 45px;
     background-color: #f5f5f5;
     border: 1px solid  #000;
     border-radius: 15px;
     font-size: 25px;
-    padding-top: 10px;
+    padding-top: 5px;
     margin-top: 25px;
     margin-left: 40px;
     text-align: center;
     float: left;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     cursor: pointer;
+    
     
 }
 
@@ -642,6 +646,8 @@ footer{
     width: 100%;
     height: auto;
     background-color: #63636A;
+    float: left;
+    margin-top: 35px;
 }
 
 footer .conteudo_footer{
