--- a/registro/cadastro.css
+++ b/registro/cadastro.css
@@ -16,12 +16,12 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 640px;
+    height: auto;
 }
 
 img{
-    width: 80px;
-    height: 80px; 
+    width: 175px;
+    height: 150px; 
     margin-top:10px;
 }
 
