--- a/registro/cadastro.css
+++ b/registro/cadastro.css
@@ -138,7 +138,7 @@ a button{
 
 .janela_modal{
     width: 100%;
-    height: 100%;
+    height: 1000px;
     position: absolute;
     top: 0;
     left: 0;
