--- a/home/home.css
+++ b/home/home.css
@@ -91,6 +91,80 @@
     width: 40px;
 }
 
+.informativos_car{
+    width: 100%;
+    padding: 10px;
+}
+
+.informativos_car{
+    width: 100px;
+
+}
+
+.informativos_car{
+    background-color: #ffffff;
+    width: 30%;
+    height: 100%;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #141274;
+    padding: 2px;
+    border: 1px solid rgba(20, 18, 116, 0.3);
+}
+
+#image{
+
+}
+
+section{
+    width: 100%;
+    background-image: url(../assets/fundoMissaoAzul.jpg);
+    background-size: cover;
+    border-radius: 25px;
+}
+
+section .container{
+    margin: 20px;
+    display: flex;
+}
+
+#logo_informativo{
+    width: 55px;
+    height: 50px;
+}
+
+#image{
+    width: 100%;
+}
+
+#image div{
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.div_informativos{
+    width: 100%;
+    height: auto;
+
+    border-radius: 25px;
+    padding: 10px;
+    text-align: center;
+    display: flex;
+}
+
+.div_informativos1{
+    width: 30%;
+    height: auto;
+    background-color: #dad9d9;
+    border-radius: 25px;
+    padding: 10px;
+    margin: 15px;
+    text-align: center;
+}
+
+
 
 /*estilo do rodapé*/
 footer{
