--- a/home/home.css
+++ b/home/home.css
@@ -8,7 +8,8 @@
 /*estilo adicionado no menu ao rolar*/
 #menu.ativo{
     background-color: #d9d9d9;
-    position: sticky;
+    position: fixed;
+    z-index: 1;
     top: 0;
 }
 
