--- a/home/home.css
+++ b/home/home.css
@@ -126,13 +126,13 @@ section{
     border-radius: 25px;
     align-items: center;
     text-align: center;
+    margin: auto;
 }
 
 section .container{
-    margin: 20px;
-    display: flex;
     align-items: center;
     text-align: center;
+    margin: auto;
 }
 
 #logo_informativo{
@@ -158,6 +158,7 @@ section .container{
     text-align: center;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin: auto;
 }
 
