--- a/home/home.css
+++ b/home/home.css
@@ -145,6 +145,115 @@
     border-radius: 15px;
 }
 
+#fundo2{
+    width: 100%;
+    height: 350px;
+    background-color: #141274;
+    color: #ffffff;  
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1{
+    text-align: center;
+}
+
+.textos_1{
+    width: 30%;
+    height: auto;
+    background-color: #97959588;
+    border-radius: 15px;
+    text-align: center;
+    margin-left: 2.5%;
+    margin-bottom: 25px;
+    float: left;
+    
+}
+
+.imagen_icone{
+    width: 15%;
+    height: 15%;
+}
+.imagen_icone1{
+    width: 15%;
+    height: 15%;
+}
+.imagen_icone2{
+    width: 15%;
+    height: 15%;
+}
+
+
+#divdoformulario{
+    float: left;
+    width: 80%;
+    height: 440px;
+    background-color: #97959588 ;
+    margin-left: 8.5%;
+    align-items: center;
+    border-radius: 15px;
+}
+.formularinho{
+    align-items: center;
+}
+#formulario1{
+    text-align: center;
+    width: 100%;
+    height: 750px;
+    background-color: #141274;
+    color: #ffffff;  
+    padding: 2px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#formulario1 h1{
+    padding: 2px;
+    text-align: center;
+}
+
+#lab{
+    padding: 2px;
+}
+
+label{
+    padding: 5px;
+}
+
+::placeholder{
+    padding: 10px;
+}
+
+#fale_mais ::placeholder{
+    margin-bottom: 10px;
+}
+
+input{
+    border-radius: 3px;
+    background-color: white;
+    border: none;
+
+}
+
+input p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float: left;
+    padding: 5px;
+    text-align: center;
+    display: block;
+    
+}
+label{
+    padding: 2px;
+}
+
+#fale_mais{
+    width: 300px;
+    height: 100px;
+    align-items: center;
+    border-radius: 10px;
+}
+
+
+
 /*estilo do rodapé*/
 footer{
     width: 100%;
