--- a/home/home.css
+++ b/home/home.css
@@ -317,11 +317,13 @@ footer .topo_pagina span{
     color: #000000;
 }
 
-footer .copyright{
+.copyright{
     background-color: #ffffff;
     text-align: center;
     font-size: 20px;
     padding: 10px;
     width: 100%;
     height: 50px;
+    float:  left;
+    color: #000000;
 }
