--- a/home/home.css
+++ b/home/home.css
@@ -321,9 +321,14 @@ footer .topo_pagina span{
     background-color: #ffffff;
     text-align: center;
     font-size: 20px;
-    padding: 10px;
+    padding: 5px;
     width: 100%;
-    height: 50px;
+    height: 30px;
     float:  left;
     color: #000000;
+}
+
+.copyright p{
+    margin: auto;
+    text-align: center;
 }
